Bug 1252055 P1 Make equivalent ServiceWorker DOM objects strictly equal in js. r=ehsan